--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "build": "grafana-toolkit plugin:build",
     "test": "grafana-toolkit plugin:test",
-    "dev": "webpack --mode development",
-    "watch": "webpack --mode development --watch",
+    "dev": "grafana-toolkit ??? something with watch",
     "test:coverage": "yarn test --coverage",
     "test:badges": "yarn test:coverage && jest-coverage-badges",
     "prettier:check": "prettier --list-different \"src/**/*.{ts,tsx}\"",
@@ -21,39 +20,18 @@
     "rss-to-json": "^1.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
     "@grafana/toolkit": "next",
     "@grafana/ui": "next",
-    "@types/enzyme": "^3.9.3",
-    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.13",
-    "@types/jquery": "^3.3.29",
-    "@types/q": "^1.5.2",
-    "@types/react": "^16.8.18",
-    "@types/react-dom": "^16.8.4",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.6",
-    "babel-preset-env": "^1.7.0",
-    "clean-webpack-plugin": "^2.0.2",
-    "copy-webpack-plugin": "^5.0.3",
-    "css-loader": "^2.1.1",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.13.1",
-    "enzyme-to-json": "^3.3.5",
     "jest": "^24.8.0",
     "jest-coverage-badges": "^1.1.2",
     "jquery": "^3.4.1",
     "prettier": "^1.17.1",
     "prettier-eslint-cli": "^4.7.1",
-    "replace-in-file-webpack-plugin": "^1.0.6",
-    "style-loader": "^0.23.1",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.1",
-    "typescript": "^3.4.5",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.1",
+    "enzyme-to-json": "^3.3.5",
+    "ts-jest": "^24.0.2"
   },
   "prettier": {
     "trailingComma": "es5",
