Experimenting with react-testing-library

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
-    "@grafana/toolkit": "next",
     "@grafana/ui": "next",
+    "@testing-library/react": "^8.0.2",
     "@types/enzyme": "^3.9.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.13",
@@ -38,9 +38,6 @@
     "clean-webpack-plugin": "^2.0.2",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.13.1",
-    "enzyme-to-json": "^3.3.5",
     "jest": "^24.8.0",
     "jest-coverage-badges": "^1.1.2",
     "jquery": "^3.4.1",
