--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "jquery": "^3.4.1",
     "prettier": "^1.17.1",
     "prettier-eslint-cli": "^4.7.1",
-    "ts-jest": "^24.0.2"
+    "ts-jest": "^24.0.2",
+    "tslib": "^1.10.0"
   },
   "prettier": {
     "trailingComma": "es5",
