--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "rss-parser": "^3.7.1",
     "rss-to-json": "^1.0.4"
   },
   "devDependencies": {
