--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "rss-to-json": "^1.0.4"
+    "rss-parser": "^3.7.1"
   },
   "devDependencies": {
-    "@grafana/toolkit": "next",
     "@grafana/ui": "next",
     "@testing-library/react": "^8.0.2",
     "@types/jest": "^24.0.13",
-    "jest": "^24.8.0",
     "jest-coverage-badges": "^1.1.2",
     "jquery": "^3.4.1",
     "prettier": "^1.17.1",
     "prettier-eslint-cli": "^4.7.1",
-    "ts-jest": "^24.0.2",
-    "tslib": "^1.10.0"
+    "jest": "24.8.0",
+    "ts-jest": "24.0.2",
+    "tslib": "1.10.0",
+    "typescript": "3.5.1"
   },
   "prettier": {
     "trailingComma": "es5",
